hidden input shouldn't make select area taller on narrow screens. fixes #85

--- a/src/scss/_items.scss
+++ b/src/scss/_items.scss
@@ -129,6 +129,8 @@
 	// visibility:hidden can prevent the input from receiving focus
 	.input-hidden & > input{
 		opacity: 0;
+		position: absolute;
+		left: -10000px;
 	}
 
 }
